# annety

./: .gitignore  CMakeLists.txt  Makefile  Makefile.manual  README.md  annety.cbp  annety.layout  build.sh
annety/include/: AtExit.h  ByteBuffer.h  ByteOrder.h  CallbackForward.h  ConditionVariable.h  CountDownLatch.h  Crc32c.h  EintrWrapper.h  EndPoint.h  EventLoop.h  EventLoopThread.h  Exceptions.h  File.h  FileEnumerator.h  LogFile.h  LogStream.h  Logging.h  Macros.h  NetBuffer.h  SafeStrerror.h  ScopedClearLastError.h  ScopedFile.h  ScopedGeneric.h  SignalServer.h  Singleton.h  StringPrintf.h  StringUtil.h  TcpClient.h  TcpConnection.h  TcpServer.h  ThreadForward.h  ThreadLocal.h  ThreadLocalSingleton.h  TimeStamp.h  TimerId.h  Times.h  WeakCallback.h
annety/include/codec/: Codec.h  LengthHeaderCodec.h  ProtobufCodec.h  ProtobufDispatcher.h  StringEofCodec.h
annety/include/containers/: Any.h  Bind.h
annety/include/files/: File.h  FileEnumerator.h  FilePath.h  FileUtil.h  FilesUtil.h
annety/include/protobuf/: ProtobufCodec.h  ProtobufDispatch.h  ProtobufDispatcher.h
annety/include/protorpc/: ProtorpcChannel.h  ProtorpcCodec.h  ProtorpcMessage.proto  ProtorpcServer.h
annety/include/strings/: StringPiece.h  StringPrintf.h  StringSplit.h  StringUtil.h
annety/include/synchronization/: BlockingQueue.h  ConditionVariable.h  CountDownLatch.h  MutexLock.h
annety/include/threading/: Thread.h  ThreadForward.h  ThreadLocal.h  ThreadLocalSingleton.h  ThreadPool.h
document/: README.md
examples/: CMakeLists.txt
examples/asio/: CMakeLists.txt
examples/asio/chat/: LengthHeaderCodec.h
examples/asio/chat/client/: Makefile  client.cc
examples/asio/chat/server/: Makefile.manual  server.cc  server_threaded.cc  server_threaded_efficient.cc
examples/chargen/: Makefile  chargen.cc  chargen.h
examples/chargen/client/: Makefile  chargen.cc  chargen.h  main.cc
examples/chargen/server/: Makefile  chargen.cc  chargen.h  main.cc
examples/chargenclient/: .gitignore  Makefile  chargen.cc  chargen.h  main.cc
examples/daytime/: .gitignore  Makefile  daytime.cc  daytime.h  main.cc
examples/discard/: .gitignore  Makefile  discard.cc  discard.h  main.cc
examples/echo/: .gitignore  Makefile  echo.cc  echo.h  main.cc
examples/netty/: CMakeLists.txt
examples/netty/discard/client/: Makefile.manual  client.cc  client.h  main.cc
examples/netty/discard/server/: main.cc  server.cc  server.h
examples/netty/echo/client/: Makefile  client.cc  client.h  echo.cc  echo.h  main.cc
examples/netty/echo/server/: Makefile  echo.cc  echo.h  main.cc  server.cc  server.h
examples/pingpong/: CMakeLists.txt
examples/pingpong/client/: Makefile  client.cc
examples/pingpong/server/: Makefile  server.cc
examples/protobuf/: CMakeLists.txt
examples/protobuf/codec/: CMakeLists.txt  Query.proto
examples/protobuf/codec/client/: .gitignore  Makefile  Makefile.manual  client.cc
examples/protobuf/codec/server/: .gitignore  Makefile  Makefile.manual  server.cc
examples/protobuf/qa/: Query.proto
examples/protobuf/rpc/: CMakeLists.txt  Query.proto
examples/protobuf/rpc/client/: .gitignore  Makefile  Makefile.manual  client.cc
examples/protobuf/rpc/server/: Makefile  Makefile.manual  server.cc
examples/simple/: CMakeLists.txt
examples/simple/chargen/: CMakeLists.txt
examples/simple/chargen/client/: Makefile.manual  chargen.cc  client.cc  client.h  main.cc
examples/simple/chargen/server/: Makefile.manual  chargen.cc  chargen.h  main.cc  server.cc  server.h
examples/simple/daytime/: Makefile.manual  daytime.cc  daytime.h  main.cc
examples/simple/discard/: discard.cc  discard.h  main.cc
examples/simple/echo/: echo.cc  echo.h  main.cc
examples/simple/time/: CMakeLists.txt
examples/simple/time/client/: client.cc  client.h  main.cc  times.cc
examples/simple/time/server/: main.cc  server.cc  server.h  times.cc  times.h
examples/time/: .gitignore  Makefile  times.cc  times.h
include/: AtExit.h  ByteBuffer.h  ByteOrder.h  CMakeLists.txt  CallbackForward.h  EintrWrapper.h  EndPoint.h  EventLoop.h  EventLoopPool.h  FormatMacros.h  LogFile.h  LogStream.h  NetBuffer.h  SafeStrerror.h  ScopedClearLastError.h  ScopedFile.h  ScopedGeneric.h  SignalServer.h  TcpClient.h  TcpConnection.h  TcpServer.h  TimeStamp.h  TimerId.h
include/codec/: Codec.h  LengthHeaderCodec.h  StringEofCodec.h
include/containers/: Any.h  Bind.h
include/files/: File.h  FileEnumerator.h  FilePath.h  FileUtil.h
include/protobuf/: ProtobufCodec.h  ProtobufDispatch.h
include/protorpc/: ProtorpcChannel.h  ProtorpcClient.h  ProtorpcMessage.proto  ProtorpcServer.h
include/strings/: StringPiece.h  StringPrintf.h  StringSplit.h  StringUtil.h
include/synchronization/: CountDownLatch.h
include/threading/: Thread.h  ThreadForward.h  ThreadLocal.h  ThreadLocalSingleton.h
src/: Acceptor.cc  Acceptor.h  AtExit.cc  AtExit.h  BlockingQueue.h  BuildConfig.h  ByteBuffer.cc  ByteBuffer.h  ByteOrder.h  CMakeLists.txt  CallbackForward.h  Channel.cc  Channel.h  CompilerSpecific.h  ConditionVariable.cc  ConditionVariable.h  Connector.cc  Connector.h  Copyable.h  CountDownLatch.cc  CountDownLatch.h  Crc32c.cc  EPollPoller.cc  EPollPoller.h  EintrWrapper.h  EndPoint.cc  EndPoint.h  Endian.h  EventFD.cc  EventFD.h  EventLoop.cc  EventLoop.h  EventLoopPool.cc  EventLoopPool.h  EventLoopThread.cc  EventLoopThread.h  EventLoopThreadPool.cc  EventLoopThreadPool.h  Exception.cc  Exception.h  (+93 more)
src/testing/: main.cc
src/testing/bind/: Makefile  main.cc
src/testing/buffer/: main.cc
src/testing/file/: Makefile  main.cc
src/testing/logging/: Makefile  main.cc
src/testing/signalserver/: Makefile  main.cc
src/testing/string/: main.cc
src/testing/tcpclient/: Makefile  main.cc
src/testing/tcpserver/: Makefile  main.cc
src/testing/thread/: Makefile  main.cc
src/testing/time/: .gitignore  main.cc
tests/: CMakeLists.txt
tests/files/: CMakeLists.txt  FilePath_unittest.cc
tests/strings/: CMakeLists.txt  StringPiece_unittest.cc  StringPrintf_unittest.cc  StringSplit_unittest.cc
(+11 files in other folders)
