ADD_EXECUTABLE(asio_chatserver chat/server/server.cc)
TARGET_LINK_LIBRARIES(asio_chatserver annety)

ADD_EXECUTABLE(asio_chatserver_threaded chat/server/server_threaded.cc)
TARGET_LINK_LIBRARIES(asio_chatserver_threaded annety)

ADD_EXECUTABLE(asio_chatserver_threaded_efficient chat/server/server_threaded_efficient.cc)
TARGET_LINK_LIBRARIES(asio_chatserver_threaded_efficient annety)

ADD_EXECUTABLE(asio_chatclient chat/client/client.cc)
TARGET_LINK_LIBRARIES(asio_chatclient annety)
